--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
 </head>
 <body>
     <header>
-        <a href="">WebStudio</a>
+        <nav>
+            <a href="">WebStudio</a>
         <ul>
             <li><a href="">Студия</a></li>
             <li><a href="">Портфолио</a></li>
             <li><a href="">Контакты</a></li>
         </ul>
+    </nav>
 
         <ul>
             <li><a href="">info@devstudio.com</a></li>
