--- a/index.html
+++ b/index.html
@@ -57,17 +57,17 @@
             <ul>
                 <li>
                     <a href="">
-                     <img src="./img/fotografy/logo1.png" alt="hands and keyboard">
+                     <img src="./img/fotografy/logo1.png" width="370" alt="hands and keyboard">
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="./img/fotografy/logo2.png" alt="hands and keyboard and phone">
+                        <img src="./img/fotografy/logo2.png" width="370" alt="hands and keyboard and phone">
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="./img/fotografy/logo3.png" alt="hands and tablet">
+                        <img src="./img/fotografy/logo3.png" width="370" alt="hands and tablet">
                     </a>
                 </li>
             </ul>
@@ -106,7 +106,7 @@
     <footer>
         <a href="">WebStudio</a>
         <address>
-            г. Киев, пр-т Леси Украинки, 26
+            <p>г. Киев, пр-т Леси Украинки, 26</p>
             <a href="">info@example.com</a>
             <a href="">+38 099 111 11 11</a>
         </address>
